--- a/CSIntro.tex
+++ b/CSIntro.tex
@@ -5,65 +5,62 @@ which they may be installed.  In an increasingly diverse software ecosystem it i
 differences to appear between these environments.  Whether it happens because of a lack of adherence to standards or
 developer error, the result is the same: software written to run in multiple environments falls victim to the
 differences between those environments.  These can easily go unnoticed due to the infeasibility of testing software
-across every combination of hardware and software on which it is expected to run.   The typical approach to eliminating
-faults of any kind in an application is to test its functionality through a number of tests to ensure it acts as
-expected.  In the case of issues that arise from an application's environment it is not possible to enumerate and test
-for an acceptable amount of faults due to the variety of hardware and software systems that can make up the environment.
+across every combination of hardware and software on which it is expected to run.
 
-This problem is of particular concern in the context of today's highly network dependent applications.  With the
-explosion of mobile computing and services provided via the internet, applications that are completely reliant on
-well-behaved network communication are increasingly common.  As a result a great deal of emphasis must be placed on
-properly dealing with faults in these network communications.  Unfortunately, identifying these faults is difficult due
-to the inability of the developer to replicate all possible application environments, exhaust a wide variety of code
-paths and to ensure consistent performance.
+This is a problem area that is largely unexplored.  The most popular testing methodologies today are various flavors of
+test suites or analysis tools that have one thing in common -- they primarily focus on, and are most effective at,
+ensuring that an applications code is correct internally.  CrashSimulator has a different focus.  Its goal is to give
+identify bugs that appear as a result of the communication between an application and its environment.
 
-In an attempt to remedy this situation, a wide variety of automated testing tools have been developed.  These tools
-typically follow either a black-box or white-box approach.  In the case of white-box testing, the tools attempt to gain
-an understanding of the application by analyzing its code, with the goal of generating inputs that execute the
-application's code paths.  In the case of black-box testing, the tools simply generate inputs and present them to the
-application in order to achieve a similar goal.  Both of these techniques have their advantages and disadvantages.
+CrashSimulator achieves this goal by analyzing and manipulating the execution of the application being tested.
+Specifically, CrashSimulator ``replays'' a previously recorded system call trace of the application being tested and
+uses the control this gives in order to observe the system calls an application makes and to intercede at specific
+points in order to direct execution down a path that is interesting from a testing perspective.
 
-CrashSimulator is a single utility that can combine the best qualities of the above techniques in order to provide
-developers with the confidence that their applications are reasonably free of environment-induced faults.
-CrashSimulator meets this need by providing automated identification of environment-induced faults through simulated
-deviations from the normal flow of system calls an application makes when interacting with its environment.  This allows
-a developer to test an application as if it was running in an environment different from the one in which it is being
-written. Like other white-box tools, CrashSimulator attempts to analyze an application in order to understand where it
-can inject faults to best test the application.  However, unlike other tools it bypasses the application's source code
-entirely --- instead relying on system call traces.  This reduces CrashSimulator's footprint by eliminating complex
-programming language analysis code while still allowing insight into the application's operation.  Furthermore, because
-it bases its analysis on system call traces from the application running in a real environment this analysis takes into
-account the application's interactions with that environment.
+This allows CrashSimulator to find environment-related bugs in two ways.  First, CrashSimulator can passively observe
+the system calls being made during a replay execution and identify sequences of system calls that are know to be
+indactive of incorrect behavior.  Second, CrashSimulator can interrupt an interesting system call and modify its results
+and side effects in order to direct execution down a particular path that needs to be tested.
 
-CrashSimulator's analysis relies on two concepts.  The first is encoding bad system call patterns as deterministic
-computation models (i.e. DFA, PDA, etc.....) Encoding behavior in this way allows us to identify the correct point to
-inject failures into a given execution and to make an assessment about whether the application responded to the injected
-failure correctly................
+CrashSimulator depends on two capabilities in order for its bug finding strategy to work.  The first is encoding bad
+system call patterns as deterministic computation models.  Encoding behavior in this way allows CrashSimulator to
+identify make an assessment about whether the application has responded to a particular environmental condition
+correctly.  For example, in Linux moving a file requires two different processes depending on whether or not the file is
+being moved across storage devices.  The case where a file is being moved from one storage device to another requires
+that the application performing the move manually re-apply the files permissions.  There is a sequence of system calls
+that identify whether or not this action has taken place.  By using a state machine that accepts executions where this
+this sequence takes place and rejects executions where it doesn't, CrashSimulator can decide whether this aspect of of
+the move happened or not.
 
-The second is deterministic replay of the application under test's system call behavior.  Replaying an earlier execution
-allows us to treat these anomalous executions like test cases.  That is, they can be run in any environment simulating,
-from the application's perspective, the environment we want to test the application in............
-    
-In short, CrashSimulator helps us find bugs faster by allowing to inject problematic behavior into an application at the
-system call level.  For example, we can make a call to rename() fail with the EXDEV errno value which should force
-well-behaved applications to either initiate a manual cross-device file copy procedure or fail out indicating an error.
-If the application continues as if nothing is amiss, then it has failed to properly handle the anomaly (an ``unusual''
-condition).
+The second capability is the ability replay a recording of the application under test's system call behavior.  This
+capability is primarily useful in cases where CrashSimulator must manipulate execution in order to test some aspect of
+an application but it also provides key advantages from a usability perspective.  Replaying a system call trace involves
+executing the application under test and pairing the system calls it makes up with corresponding system calls from a
+previously recorded trace.  Instead of letting these system calls be carried out by the kernel, CrashSimulator steps in
+and replicates the results and side effects that are present in the system call trace.  In this way, CrashSimulator
+insures that the execution follows the same path as is represented in the trace.  By extension, this means that
+modifications to the system call trace are reflected in the replay execution of the application under trace.  In this
+way, CrashSimulator can inject unexpected conditions into the applications execution in order to see how it responds.
 
-If this process is repeated many times over with multiple anomaly types and checkers it acts like a test suite.  Because
-anomalies can be injected into any application that presents the appropriate opportunity, the ``tests'' that make up
-this ``suite'' are applicable across applications.  This allows CrashSimulator's user to construct a suite of tests
-built from all the applications they work on so it can be leveraged on any project touch.
+From a usability perspective, the above provides a repeatable way to inject anomalous behavior into executions of any
+application that needs to be tested.  Essentially, a ``test suite'' of interesting injectable environment conditions can
+be accumulated from work across some number projects and applied across another project that needs to be tested.  When
+these ``tests'' are collected based on issues experienced in other environments, the collection of ``tests''
+approximates the unusual conditions that any application might expect to encounter if it was run in this environment.
+By executing any application against the ``suite'' of ``tests'' gathered from a particular environment, CrashSimulator
+is effectively executing the application inside a simulation of that environment complete with all its peculiarity.  In
+this way, CrashSimulator is able to give developers a sense of how an application will perform in that evironment so
+that they can construct to deal with the enviroment correctly.
 
-CrashSimulator makes the following contributions: \emph{Do we need to rework contributions?}
+CrashSimulator makes the following contributions:
 
     \begin{enumerate}
         \item{CrashSimulator is the first tool to use system call traces recorded in one environment as a basis for
             injecting faults into an application running in another environment.}
-        \item{CrashSimulator is able to produce thousands of mutated system call traces per minute even when operating
-            on large system call traces from complex applications.}
-        \item{CrashSimulator is able to reliably identify faults that result from differences between an applications
-            development environment and its deployment environment.}
-        \item{CrashSimulator's efficacy can be validated by its ability to identify errors listed in the bug trackers of
-            major projects and predicted by other testing tools.}
+        \item{CrashSimulator is the first tool to replay previously recorded system call traces in order find bugs by
+            monitoring and manipulating the execution of an application.}
+        \item{CrashSimulator is able to reliably identify faults that result from differences between the environments
+            in which it is expected to run.}
+        \item{CrashSimulator's efficacy can be validated by its ability to identify bugs, both previously known and
+            unknown, in major application.}
     \end{enumerate}
