--- a/CSBackgroundAndMotivation.tex
+++ b/CSBackgroundAndMotivation.tex
@@ -15,11 +15,11 @@ running.
 
     As an example of how the implementations of different environments can impact the execution of an application
     consider the following bug identified by NetCheck.  In {\tt BSD} and {\tt OS X} sockets returned by the {\tt
-      accept()} system call inherit the values of the {\tt O_NONBLOCK} and {\tt O_ASYNC} flags from their parent
+      accept()} system call inherit the values of the {\tt O\_NONBLOCK} and {\tt O\_ASYNC} flags from their parent
     socket.  In {\tt Linux}, these values are not inherited.  As a result, the correct behavior is to always explicitly
     set these flags to the appropriate values on child sockets.  This difference environmental difference presented
     itself as a bug in the socket implementation of {\tt Python 3.2}.  Python took advantage of non-blocking sockets in
-    order to implement timeout capabilities for sockets.  Because Python did not specifically set the {\tt O_NONBLOCK}
+    order to implement timeout capabilities for sockets.  Because Python did not specifically set the {\tt O\_NONBLOCK}
     flag on the child sockets underlying its socket object abstraction it was possible that, depending on the
     environment, the Python socket object would report the socket as either blocking or non-blocking while the actual
     underlying socket was configured for the opposite behavior.  This is the sort of bug that CrashSimulator focuses on
