--- a/CSBackgroundAndMotivation.tex
+++ b/CSBackgroundAndMotivation.tex
@@ -14,11 +14,11 @@ running.
     makes during the course of its execution.
 
     As an example of how the implementations of different environments can impact the execution of an application
-    consider the following bug identified by NetCheck.  In {\tt BSD} and {\tt OS X} sockets returned by the {\tt
+    consider the following bug identified by NetCheck.  In BSD and OS X sockets returned by the {\tt
       accept()} system call inherit the values of the {\tt O\_NONBLOCK} and {\tt O\_ASYNC} flags from their parent
-    socket.  In {\tt Linux}, these values are not inherited.  As a result, the correct behavior is to always explicitly
+    socket.  In Linux, these values are not inherited.  As a result, the correct behavior is to always explicitly
     set these flags to the appropriate values on child sockets.  This difference environmental difference presented
-    itself as a bug in the socket implementation of {\tt Python 3.2}.  Python took advantage of non-blocking sockets in
+    itself as a bug in the socket implementation of Python 3.2.  Python took advantage of non-blocking sockets in
     order to implement timeout capabilities for sockets.  Because Python did not specifically set the {\tt O\_NONBLOCK}
     flag on the child sockets underlying its socket object abstraction it was possible that, depending on the
     environment, the Python socket object would report the socket as either blocking or non-blocking while the actual
@@ -29,7 +29,7 @@ running.
 
     Moving files around in a filesystem is an extremely common operation that, on face value, seems to fairly simplistic
     to carry out.  In reality, things become complex quickly once a few implementation details are taken into account:
-    namely limitations in Linux's rename() system call and the way Linux's directory heirarchy can abstract away
+    namely limitations in Linux's {\tt rename()} system call and the way Linux's directory heirarchy can abstract away
     complicated device configurations -- a feature is usually a boon for developers.
 
     In this example, consider a Linux directory structure with two folders, /mnt/a/ and /mnt/b/, with each being a mount
